--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,11 +8,12 @@
   <script src="https://unpkg.com/react/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="text/babel" src="index.js"></script>
+  
 </head>
 
 <body>
   <div id="app">Rendering...</div>
+  <script src="index.tsx"></script>
 </body>
 
 </html>
